<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="MAIN" Id="{6cccbe2b-9e3a-4381-8a10-2f3e5446e712}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
MyArray : ARRAY[1..100] OF MyStructure;  // Array of 100 structures
    i : INT;  // Loop index
	binputbools AT %I*:ARRAY [1..4] OF BOOL;
	boutputbools AT %Q*:ARRAY [1..4]OF BOOL;
	d:BOOL;
	h:int;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[


FOR i := 1 TO 100 DO
    MyArray[i].Var1 := i;             // Assign serial number 1 to 100 to Var1
    MyArray[i].Var2 := 105.9;          // Set constant value for Var2
    MyArray[i].Var3 := TRUE;          // Set constant value for Var3
    MyArray[i].Var4 := T#1s;          // Set constant time value for Var4
    MyArray[i].Var5 := 'Serial #' ;  // Set a unique string for each structure
END_FOR]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="22" Count="2" />
      <LineId Id="8" Count="5" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>